@@ -15,6 +15,8 @@ add "calls N subs" to treemap mouseover box
 =head2 Changes in Devel::NYTProf 4.04
 
   Trace log messages are now flushed immediately.
+  Reduced risk of crashes in embedded applications that don't handle PL_endav
+    carefully, like mod_perl.
 
 =head2 Changes in Devel::NYTProf 4.03 (svn 1316) 19th June 2010
 
